[gd_scene load_steps=4 format=3 uid="uid://b64j3rdosaq27"]

[ext_resource type="Script" path="res://Scripts/dice_item.gd" id="1_7ygu2"]
[ext_resource type="Texture2D" uid="uid://dr10ciqdo53cg" path="res://Assets/Dice/EmptyDie.png" id="2_hyrit"]
[ext_resource type="Texture2D" uid="uid://dfa2q81mtdq43" path="res://Assets/UI/Buttons/minus_button.png" id="3_cd5sh"]

[node name="DiceItem" type="CenterContainer" groups=["rollable"]]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 158.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_7ygu2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="Display" type="TextureRect" parent="MarginContainer" groups=["rollable"]]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_hyrit")
expand_mode = 1
stretch_mode = 4

[node name="MinusButton" type="TextureButton" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("3_cd5sh")

[connection signal="gui_input" from="MarginContainer/Display" to="." method="_on_display_gui_input"]
[connection signal="button_down" from="MarginContainer/MinusButton" to="." method="_on_minus_button_button_down"]
